Exersise Css 3 added

--- a/Exercises/CSS/Ex_3/index.html
+++ b/Exercises/CSS/Ex_3/index.html
@@ -36,10 +36,10 @@
     </style>
   </head>
   <body>
-    <header>
-      <h1 class="navigation">Home Page</h1>
+    <header class="navigation">
+      <h1 >Home Page</h1>
 
-      <nav class="navigation">
+      <nav >
         <ul>
           <li>
             <a href="#">Home</a>
