--- a/Exercises/Java Scrip/Ex_1/index.html
+++ b/Exercises/Java Scrip/Ex_1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 18</title>
     <script>
+        //alert message
         alert("Hello, world!");
     </script>
 </head>
